# customer_churn_mlops

./: .gitignore  README.md  mlflow.db  pyproject.toml
.github/workflows/: CICD.yml
api/models_local/: metrics.json
mylib/: train.py  train_shadow.py
notebooks/: initial_eda.ipynb
