[project]
name = "mlops-finalProject"
version = "0.1.0"
description = "Customer Churn Prediction and Monitoring"
requires-python = "==3.10.*"

dependencies = [
    # Build & System Utilities
    "setuptools<70.0.0",
    # Formatting & linting
    "black>=24.0.0",
    "pylint>=3.0.0",
    # CLI & web
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    # HTTP & monitoring
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    # Data science
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    # ML / explainability
    "xgboost==2.1.4",
    "shap>=0.44.0",
    # ONNX
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.3.0",
    # Optimization / tracking
    "optuna>=3.6.0",
    "mlflow>=2.11.0",
    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-tabnet>=4.0.0",
    # Imaging
    "pillow>=10.3.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "streamlit>=1.59.1",
]

[project.optional-dependencies]
gpu = []

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "cuda-129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "cuda-126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


# 4. Use Markers to switch sources dynamically
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "extra != 'gpu'" },
    { index = "cuda-126", marker = "extra == 'gpu'" }
]
torchvision = [
    { index = "pytorch-cpu", marker = "extra != 'gpu'" },
    { index = "cuda-126", marker = "extra == 'gpu'" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mylib*", "api*"]
exclude = ["gui*", "monitoring*", "notebooks*", "mlruns*", "archive*", "templates*"]
